[ISSUE-7082] Make mac large command editor align correctly

--- a/extension/skin/classic/mac/firebug.css
+++ b/extension/skin/classic/mac/firebug.css
@@ -548,3 +548,8 @@ panelTab[selected="true"]:active > panelTabMenu .menuTarget {
 #fbMigrationOk {
     font-family: monospace;
 }
+
+#fbCommandEditorBrowser {
+    position: relative;
+    margin: -1px -2px;
+}
